--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 cryptography==39.0.2
 docutils==0.19
-greeting-package==0.1.0
+greeting-package @ file:///home/jeff/CodeDev/pythonPackages/greeting_package
 idna==3.4
 importlib-metadata==6.0.0
 iniconfig==2.0.0
