--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 attrs==22.2.0
 bleach==6.0.0
+build==0.10.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -20,6 +21,7 @@ pkginfo==1.9.6
 pluggy==1.0.0
 pycparser==2.21
 Pygments==2.14.0
+pyproject_hooks==1.0.0
 pytest==7.2.2
 readme-renderer==37.3
 requests==2.28.2
